apps/portfolio/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: dev
spec:
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
